# flywheel_ws

./: .gitignore  PLAN.md  PROGRESS.md  TODOS.md  install_deps.sh
memory/: best_mission.py  code_history.jsonl  lessons.jsonl
scripts/: export_metrics.py  reset_sim.sh  run_flywheel.sh
src/flywheel_common/: package.xml  setup.cfg  setup.py
src/flywheel_common/flywheel_common/: constants.py
src/flywheel_description/: CMakeLists.txt  package.xml
src/flywheel_description/config/: gazebo_bridge.yaml
src/flywheel_description/launch/: sim.launch.py
src/flywheel_description/urdf/: diffbot.urdf.xacro
src/flywheel_description/worlds/: flywheel_arena.sdf
src/flywheel_missions/: package.xml  setup.cfg  setup.py
src/flywheel_missions/flywheel_missions/: base_mission.py  mission_launcher.py
src/flywheel_orchestrator/: package.xml  setup.cfg  setup.py
src/flywheel_orchestrator/flywheel_orchestrator/: code_validator.py  code_writer.py  evaluator.py  llm_client.py  log_analyzer.py  mission_runner.py  orchestrator.py
src/flywheel_orchestrator/flywheel_orchestrator/prompts/: analyze_failure.txt  reason.txt  system.txt
src/flywheel_perception/: package.xml  setup.cfg  setup.py
src/flywheel_perception/flywheel_perception/: depth_processor.py  imu_processor.py  lidar_processor.py  world_model.py
src/flywheel_perception/launch/: perception.launch.py
tests/: conftest.py  test_base_mission_math.py  test_code_validator.py  test_constants.py  test_evaluator.py  test_lesson_store.py  test_llm_client.py
