<?xml version="1.0"?>
<package format="3">
  <name>flywheel_common</name>
  <version>0.1.0</version>
  <description>Shared constants and utilities for the flywheel project</description>
  <maintainer email="aashur@lucidbots.com">Andrew Ashur</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
