<?xml version="1.0"?>
<package format="3">
  <name>flywheel_description</name>
  <version>0.1.0</version>
  <description>Robot URDF and Gazebo world for the flywheel agent</description>
  <maintainer email="aashur@lucidbots.com">Andrew Ashur</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
