<?xml version="1.0"?>
<package format="3">
  <name>flywheel_perception</name>
  <version>0.1.0</version>
  <description>Sensor processing and world model fusion</description>
  <maintainer email="aashur@lucidbots.com">Andrew Ashur</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
